# robot_craig

robot_craig_commander/: CMakeLists.txt  package.xml
robot_craig_commander/src/: craig_joint.cpp
robot_craig_moveit/: .setup_assistant  CMakeLists.txt  package.xml
robot_craig_moveit/config/: cfg.rviz  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  robot_craig.srdf  ros_controllers.yaml
robot_craig_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demogaz.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_script.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_craig_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot_craig_sim/: CMakeLists.txt  package.xml
robot_craig_sim/config/: cfg.rviz  joints.yaml
robot_craig_sim/launch/: robot_craig_gazebo.launch  robot_craig_rviz.launch
robot_craig_sim/meshes/ensamble/: robot_craig_base_1.stl  robot_craig_link1_2.stl  robot_craig_link2_3.stl  robot_craig_link3_4.stl  robot_craig_link4_5.stl  robot_craig_link5_6.stl  robot_craig_link6_7.stl
robot_craig_sim/urdf/: robot_craig.gazebo  robot_craig.xacro  robot_craig_joints.xacro
